@@ -1,5 +1,10 @@
 2023-03-13  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	m4/groff.m4 (GROFF_TMAC): Eliminate garbage leading space from
+	contents of `tmac_wrap` shell variable.
+
+2023-03-13  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	[build]: Clarify output of `GROFF_TMAC` Autoconf test.
 
 	* configure.ac: Correct characterization of the list of macro
